--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,26 +1,24 @@
 .appContainer {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .contentWrapper {
-    flex: 1;
-    overflow-y: auto; /* Content scrolls */
-    padding: 0px; /* Padding for content */
-    margin: 0;
-    background-color: rgb(243, 242, 248);
-    transition: background 0.3s ease;
-  }
+  display: flex;
+  flex-direction: column;
+}
 
-  .contentWrapper.darkTheme {
-    background-color: rgb(0 ,0 ,0);
+.contentWrapper {
+  flex: 1;
+  overflow-y: auto;
+  padding: 0px;
+  margin: 0;
+  background-color: rgb(243, 242, 248);
+  transition: background 0.3s ease;
+}
+
+.contentWrapper.darkTheme {
+  background-color: rgb(0, 0, 0);
+}
+
+@media (max-width: 1024px) {
+  .appContainer {
   }
-  
-  /* Ensure no interference with sticky */
-  @media (max-width: 1024px) {
-    .appContainer {
-    }
-    .contentWrapper {
-      /* No extra adjustments needed */
-    }
+  .contentWrapper {
   }
+}
