--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -4,8 +4,6 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0);
-  backdrop-filter: blur(10px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,27 +49,27 @@
 }
 
 @keyframes fadeInMobile {
-  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
-  to { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
+  /* from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  to { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);} */
 }
 
 @keyframes fadeInMobileDark {
-  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
-  to { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
+  /* from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  to { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);} */
 }
 
 @keyframes fadeOutMobile {
-  from { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
-  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  /* from { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);} */
 }
 
 @keyframes fadeOutMobileDark {
-  from { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
-  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  /* from { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);} */
 }
 
 .modalContent {
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(10px);
   padding: 20px;
   border-radius: 20px;
@@ -89,7 +87,7 @@
 }
 
 .modalContent.darkTheme {
-  background: rgba(44, 44, 46, 0.7);
+  background: rgba(44, 44, 46, 0.4);
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
 }
 
