--- a/src/Dashboard/WidgetSetupModal/WidgetSetupModal.module.css
+++ b/src/Dashboard/WidgetSetupModal/WidgetSetupModal.module.css
@@ -35,13 +35,13 @@
 
 .fieldItem {
   padding: 13.5px 16px;
-  background: rgba(255, 255, 255, 0.6); /* Light mode */
+  background: rgba(229, 229, 234, 0.5);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* Light mode border */
   transition: background 0.2s ease, border-bottom 0.3s ease;
 }
 
 .fieldItem.darkTheme {
-  background: rgba(58, 58, 60, 0.6); /* Dark mode */
+  background: rgba(56, 56, 60, 0.6);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* Dark mode border */
 }
 
