--- a/src/Modal/Create Sheets And Folders/CreateSheetsAndFolders.module.css
+++ b/src/Modal/Create Sheets And Folders/CreateSheetsAndFolders.module.css
@@ -32,7 +32,7 @@
   width: 100%;
   height: 44px; /* Fixed height */
   margin: 0 auto 20px auto;
-  background: rgb(229, 229, 234, 0.6);
+  background: rgba(255, 255, 255);
   border-radius: 12px;
   position: relative;
   z-index: 10;
@@ -40,7 +40,7 @@
 }
 
 .toggleContainer.darkTheme {
-  background: rgb(58, 58, 60, 0.6); /* Dark mode: gray */
+  background: rgba(42, 42, 43, 0.6); /* Dark mode: gray */
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 
@@ -76,14 +76,14 @@
   top: 4px;
   bottom: 4px;
   width: calc(50% - 2px); /* Match button width minus padding */
-  background: rgba(255, 255, 255, 0.6); /* Light mode selected */
+  background: rgba(229, 229, 234, 0.5);
   border-radius: 10px;
   transition: left 0.3s ease;
   z-index: 11; /* Below toggleButton */
 }
 
 .toggleBackground.darkTheme {
-  background: rgba(58, 58, 60, 0.6); /* Dark mode selected */
+  background: rgba(56, 56, 60, 0.6); /* Dark mode selected */
 }
 
 .sheetActive {
@@ -116,7 +116,7 @@
   font-weight: 400;
   line-height: 20px; /* Match icon height */
   color: #1d1d1f; /* Light mode text */
-  background: rgba(255, 255, 255, 0.6); /* Light mode: white */
+  background: rgb(229, 229, 234, 0.6);
   box-sizing: border-box;
   transition: all 0.3s ease, background 0.3s ease, color 0.3s ease;
 }
@@ -164,7 +164,7 @@
 
 .headerItem {
   padding: 9px 16px;
-  background: rgba(255, 255, 255, 0.6); /* Light mode */
+  background: rgb(229, 229, 234, 0.6);
   border-bottom: 1px solid rgba(0, 0, 0, 0.1); /* Light mode border */
   transition: background 0.2s ease;
   cursor: pointer;
