--- a/src/Modal/Modal.module.css
+++ b/src/Modal/Modal.module.css
@@ -49,23 +49,23 @@
 }
 
 @keyframes fadeInMobile {
-  /* from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
-  to { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);} */
+  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(10px);}
 }
 
 @keyframes fadeInMobileDark {
-  /* from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
-  to { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);} */
+  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(10px);}
 }
 
 @keyframes fadeOutMobile {
-  /* from { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
-  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);} */
+  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(10px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
 }
 
 @keyframes fadeOutMobileDark {
-  /* from { background: rgba(0, 0, 0, 0.1); backdrop-filter: blur(10px);}
-  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);} */
+  from { background: rgba(0, 0, 0, 0); backdrop-filter: blur(10px);}
+  to { background: rgba(0, 0, 0, 0); backdrop-filter: blur(0px);}
 }
 
 .modalContent {
